# xsend-core

./: .gitignore  Cargo.toml  Dual_Mode_Product_Design.md  README.md  Rust_File_Transfer_Final_Spec_v3_1.md
cf/relay-worker/: README.md  package-lock.json  package.json  tsconfig.json  wrangler.jsonc
cf/relay-worker/migrations/: 0001_xtransfiles_relay_schema.sql  0002_clients_client_type_backfill.sql  0003_xtransfiles_billing_schema.sql  0004_xtransfiles_billing_enhanced.sql
cf/relay-worker/public/: app.js  index.html  realtime.js  sw.js
cf/relay-worker/scripts/: apply-migrations.sh
cf/relay-worker/src/: index.ts
desktop/: README.md
desktop/noop-dist/: index.html
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/src/: main.rs
src/: daemon.rs  discovery.rs  fs.rs  http.rs  jobs.rs  lan.rs  lib.rs  main.rs  metrics.rs  proto.rs  relay.rs  relay_e2ee.rs  relay_keys.rs  security.rs  sessions.rs  transfers.rs  ui.rs  wan.rs
tools/debug-web/: app.js
web/: index.html
website/: astro.config.mjs  package-lock.json  package.json
website/public/: _headers
website/src/components/: Footer.astro  Header.astro  ThemeToggle.astro
website/src/content/: config.ts
website/src/content/blog/es/: architecture.md
website/src/content/faq/: es.json  zh.json
website/src/i18n/: ui.ts
website/src/layouts/: BaseLayout.astro  BlogPost.astro
website/src/pages/: index.astro
website/src/pages/[lang]/: faq.astro  index.astro
website/src/pages/[lang]/blog/: [...slug].astro  index.astro
website/src/styles/: global.css
