[package]
name = "xsend"
version = "0.1.1"
edition = "2024"

[dependencies]
anyhow = "1.0.79"
axum = { version = "0.7.5", features = ["macros"] }
blake3 = "1.5.1"
base64 = "0.22.1"
bincode = "1.3.3"
chacha20poly1305 = "0.10.1"
futures-util = "0.3.31"
get_if_addrs = "0.5.3"
libc = "0.2.172"
hex = "0.4.3"
hkdf = "0.12.4"
rand = "0.8.5"
rcgen = "0.14.5"
reqwest = { version = "0.12.4", default-features = false, features = ["json", "rustls-tls"] }
quinn = { version = "0.11.6", default-features = false, features = ["runtime-tokio", "rustls-ring"] }
rustls = { version = "0.23.18", default-features = false, features = ["ring", "std"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
sha2 = "0.10.8"
socket2 = { version = "0.5.5", features = ["all"] }
tokio = { version = "1.36.0", features = ["full"] }
tokio-tungstenite = { version = "0.24.0", default-features = false, features = ["connect", "rustls-tls-webpki-roots"] }
tokio-util = { version = "0.7.10", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
urlencoding = "2.1.3"
uuid = { version = "1.7.0", features = ["v4", "serde"] }
x25519-dalek = "2.0.1"

[dev-dependencies]
tempfile = "3.10.1"
